# sonata-cell-position

./: .dockerignore  .env.run-docker  .env.test  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  logging.yaml  main.py  pyproject.toml  requirements.txt  run.sh  supervisord.conf  tox.ini
.github/workflows/: publish.yml  run-tests.yml
nginx/: http.js  nginx.conf  proxy_cache_common
nginx/includes/: access_log_format.conf  proxy_cache_common.conf
proxy/: Dockerfile  nginx.conf  proxy_cache_common
scripts/: healthcheck.sh
src/app/: __init__.py  __main__.py  auth.py  brain_region.py  cache.py  cli.py  config.py  constants.py  dependencies.py  errors.py  jobs.py  libsonata_helper.py  logger.py  main.py  nexus.py  schemas.py  serialize.py  service.py  utils.py
src/app/api/: __init__.py  auth.py  circuit.py  root.py
src/app/data/: brainregion_v2.1.0.json  hierarchy.json  mba_hierarchy_39.json
tests/: conftest.py  test_auth.py  test_brain_region.py  test_cache.py  test_cli.py  test_constants.py  test_libsonata_helper.py  test_logger.py  test_main.py  test_nexus.py  test_schemas.py  test_serialize.py  test_service.py  test_utils.py  utils.py
tests/api/: test_auth.py  test_circuit.py  test_root.py
tests/data/circuit/: circuit_config.json  circuit_config_single_population.json  node_sets.json  nodes.h5
