[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sonata-cell-position"
version = "2023.04.2"
description = "sonata-cell-position web API"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "h5py",
    "libsonata",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "pyyaml",
    "uvicorn[standard]",
    "voxcell",
]


[project.optional-dependencies]
cli = [
    "click",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = 'src/.*\.py$|tests/.*\.py$|doc/source/conf\.py$|setup\.py$'


[tool.isort]
profile = "black"
line_length = 100


[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
]

[tool.ruff.pydocstyle]
convention = "google"


[tool.pylint."messages control"]
disable = ["fixme", "invalid-name", "len-as-condition", "no-else-return"]

[tool.pylint.format]
# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 9
# Argument names that match this expression will be ignored. Default to name
# with leading underscore
ignored-argument-names = "_.*"
# Maximum number of locals for function / method body
max-locals = 15
# Maximum number of return / yield for function / method body
max-returns = 6
# Maximum number of branch for function / method body
max-branches = 12
# Maximum number of statements in function / method body
max-statements = 50
# Maximum number of parents for a class (see R0901).
max-parents = 7
# Maximum number of attributes for a class (see R0902).
max-attributes = 40
# Minimum number of public methods for a class (see R0903).
min-public-methods = 0
# Maximum number of public methods for a class (see R0904).
max-public-methods = 60

[tool.pylint.similarities]
# Comments are removed from the similarity computation
ignore-comments = true
# Docstrings are removed from the similarity computation
ignore-docstrings = true
# Minimum lines number of a similarity.
min-similarity-lines = 25

[tool.pylint.typecheck]
# List of class names for which member attributes should not be checked (useful
# for classes with dynamically set attributes). This supports the use of
# qualified names.
ignored-classes = []


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning:nptyping",
]


[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.run]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
precision = 0
fail_under = 80
